Chapter 2 : Dealing with Messy Data

--- a/Python/Feature Engineering for Machine Learning in Python/takeaways.ipynb
+++ b/Python/Feature Engineering for Machine Learning in Python/takeaways.ipynb
@@ -25,7 +25,13 @@
     "    - One-hot encoding : Explainable features, create N columns for N categories\n",
     "    - Dummy encoding : Necessary information without duplication, create N-1 columns for N categories\n",
     "- Merge low frequent categorical values (uncommon categories) into one single category (eg: `other`)\n",
-    "- Binarise numeric values (eg: from `num_violations` to `violation_boolean`)"
+    "- Binarise numeric values (eg: from `num_violations` to `violation_boolean`)\n",
+    "- Deal with missing values:\n",
+    "    - drop missing values that are beyond threshold (>30% of dataset)\n",
+    "    - fill completely random missing values (with mean, median, mode, `Other`, sorted next present value)\n",
+    "- Validate numeric columns\n",
+    "    - remove characters from numeric data (eg: `$` or `,` sign for currency)\n",
+    "    - make sure the column is in proper datatype (eg: `float`, `int` etc)\n"
    ]
   },
   {
@@ -48,6 +54,13 @@
     "df.loc[df['Number_col'] > 0, 'Binary_col'] = 1\n",
     "import numpy as np\n",
     "df['Binned_Group'] = pd.cut( df['Number_col'], bins=[-np.inf, 0, 2, np.inf], labels=[1, 2, 3])\n",
+    "\n",
+    "# DEAL WITH MISSING VALUES.....\n",
+    "\n",
+    "# Validate numeric columns\n",
+    "df['RawSalary'] = df['RawSalary'].str.replace(',', '').astype('float')\n",
+    "coerced_vals = pd.to_numeric(df['RawSalary'], errors='coerce')\n",
+    "print(df[coerced_vals.isna()].head()) # Sanity check which values still show errors\n",
     "```"
    ]
   },
@@ -138,6 +151,62 @@
     "encoder_lvl.fit([ 'LOW', 'NORMAL', 'HIGH'])\n",
     "# Apply one hot encoding on the third column of the dataset\n",
     "df[:,2] = encoder_lvl.transform(df[:,2]) \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Deal with Missing values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Show number of missing data\n",
+    "df.isna().sum()\n",
+    "\n",
+    "# Visualize missing data information\n",
+    "import missingno as msno\n",
+    "import matplotlib.pyplot as plt\n",
+    "msno.matrix(airquality)\n",
+    "plt.show()\n",
+    "\n",
+    "# Drop missing data\n",
+    "df_dropped = df.dropna(subset = ['col'])\n",
+    "\n",
+    "# Replace/impute missing data with single value\n",
+    "col_mean = df['col'].mean()\n",
+    "df_imputed = df.fillna({'col': col_mean})\n",
+    "\n",
+    "# Replace/impute missing data with series\n",
+    "series_imp = df['col1'] * 5\n",
+    "df_imputed = df.fillna({'col2':series_imp})\n",
+    "\n",
+    "# Missing values are not always \"NaN\". They can be blank, \"?\" or other symbols (rarely)\n",
+    "# Check for values through manual validations first\n",
+    "df[\"col\"].value_counts() # Look out for suspicious values\n",
+    "# Determine number of missing values in a column\n",
+    "df.isna().any()\n",
+    "df['col'].isnull().sum()\n",
+    "# Drop missing values\n",
+    "df.dropna(axis = 0) # Drop entire row for missing value (default)\n",
+    "df.dropna(axis = 1) # Drop entire column for missing value\n",
+    "# Drop missing values for specific column\n",
+    "df.dropna(subset = [\"col\"], axis = 0)\n",
+    "# Replace missing values\n",
+    "df[\"col\"].replace(np.nan, new_val)\n",
+    "df.fillna(0)\n",
     "```"
    ]
   },
