--- a/SQL/Introduction to SQL/takeaways.ipynb
+++ b/SQL/Introduction to SQL/takeaways.ipynb
@@ -118,7 +118,62 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Chapter 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SELECT : Querying from table or view"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "SELECT column_name AS new_name, *\n",
+    "FROM table_or_view_name\n",
+    "LIMIT 10\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DISTINCT : Unique combination of columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "SELECT DISTINCT column1, column2\n",
+    "FROM table_name;\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### VIEW : Virtual table that saves the result of a SELECT statememnt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "CREATE VIEW my_view AS\n",
+    "SELECT column1, column2\n",
+    "FROM my_table\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
