Chapter 2 : Filtering Records

--- a/SQL/Intermediate SQL/takeaways.ipynb
+++ b/SQL/Intermediate SQL/takeaways.ipynb
@@ -133,6 +133,139 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Chapter 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `WHERE` : Filtering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "SELECT col\n",
+    "FROM table_name\n",
+    "WHERE col = 'example_value';\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `OR` : Filtering for data that satisfy any condition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "SELECT * \n",
+    "FROM table_name \n",
+    "WHERE col1='A' OR col2>=100; \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `AND` : Filtering for data that satisfy all conditions\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "SELECT * \n",
+    "FROM table_name \n",
+    "WHERE col1='A' AND col2>=100; \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `BETWEEN` : Inclusive AND within range for a single column"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "SELECT *\n",
+    "FROM table_name\n",
+    "WHERE col_name BETWEEN value1 AND value2;\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `LIKE` , `ILIKE`, `NOT LIKE`, `NOT ILIKE` : Pattern Matching"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "SELECT *\n",
+    "FROM table_name\n",
+    "WHERE col1 LIKE '__t%' AND col2 NOT ILIKE 'a%t_ ;\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `IN` : Selecting from List, alternative of multiple `OR` of a single column"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "SELECT col\n",
+    "FROM table_name\n",
+    "WHERE col IN (1920, 1930, 1940);\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `IS NULL`, `IS NOT NULL` : Filtering condition for missing values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "``\n",
+    "SELECT *\n",
+    "FROM table_name\n",
+    "WHERE col1 IS NULL OR col1 IS NOT NULL;\n",
+    "``"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
