Chapter 3 : Aggregate Functions

--- a/SQL/Intermediate SQL/takeaways.ipynb
+++ b/SQL/Intermediate SQL/takeaways.ipynb
@@ -266,6 +266,70 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `AVG()` , `SUM()` , `MIN()` , `MAX()` , `COUNT()` : Numeric aggregation for summarization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "SELECT SUM(col) AS sum_col, \n",
+    "    AVG(col) AS avg_col,\n",
+    "    MIN(col) AS min_col, \n",
+    "    MAX(col) AS max_col, \n",
+    "    COUNT(col) AS count_col\n",
+    "FROM table_name;  \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Arithmetic in SQL : Mahtematical operations among columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "SELECT (gross - budget) AS profit\n",
+    "FROM business;\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `ROUND`, `CEIL` (or CEILING), `FLOOR` : Numeric Rounding Operations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "SELECT ROUND(column_name, 2) AS two_decimal_place,\n",
+    "    CEIL(column_name) AS nearest_upper_int\n",
+    "    FLOOR(column_name) AS nearest_lower_int,\n",
+    "FROM table_name;\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
