Chapter 4 : Sorting and Grouping

--- a/SQL/Intermediate SQL/takeaways.ipynb
+++ b/SQL/Intermediate SQL/takeaways.ipynb
@@ -330,7 +330,67 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Chapter 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `ORDER BY` : Sorting data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "SELECT * \n",
+    "FROM TableName \n",
+    "ORDER BY col1 DESC, col2_Tiebreak ASC;\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `GROUP BY` : Grouping data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "SELECT nonagg_col1, nonagg_col2,  COUNT(agg_col) \n",
+    "FROM table_name\n",
+    "GROUP BY nonagg_col1, nonagg_col2;\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `HAVING` : The `WHERE` clause for `GROUP BY`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "SELECT nonagg_col1, nonagg_col2,  COUNT(agg_col) \n",
+    "FROM table_name\n",
+    "WHERE nonagg_col1 IN ('A','B')\n",
+    "GROUP BY nonagg_col1, nonagg_col2\n",
+    "HAVING COUNT(agg_col) >10\n",
+    "ORDER BY nonagg_col2 DESC\n",
+    "LIMIT 5;\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
