--- a/Python/Feature Engineering for Machine Learning in Python/takeaways.ipynb
+++ b/Python/Feature Engineering for Machine Learning in Python/takeaways.ipynb
@@ -32,7 +32,14 @@
     "- Deal with outliers\n",
     "- Validate numeric columns\n",
     "    - remove characters from numeric data (eg: `$` or `,` sign for currency)\n",
-    "    - make sure the column is in proper datatype (eg: `float`, `int` etc)\n"
+    "    - make sure the column is in proper datatype (eg: `float`, `int` etc)\n",
+    "- For text processing : Generate numeric features \n",
+    "    1. Remove unwanted/non-letter characters \n",
+    "    2. Standardize text : convert to lowercase / uppercase\n",
+    "    3. Generate Feature, Mean word length : average length of words in text = character_count / word_count\n",
+    "    4. Generate Feature, Bag of words : Word Count Vector = number of times a word appeared in a text\n",
+    "    5. Generate Feature, Normalized significance of words : Calculate TF-IDF = normalization of word vector (significance of word in a document compared to all words in all documents)\n",
+    "    6. Generate Feature, contextual n-gram significance of word sequence : Calculate TF-IDF = normalization of word vector (significance of word in a document compared to all words in all documents)"
    ]
   },
   {
@@ -341,6 +348,53 @@
     "log_scaler = PowerTransformer()\n",
     "your_scaler.fit(df[['col']])\n",
     "df['scaled_col'] = your_scaler.transform(df[['col']])\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Feature Engineering for text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Remove non-letter characters\n",
+    "speech_df['text'] = speech_df['text'].str.replace('[^a-zA-Z]', ' ', regex=True)\n",
+    "# Standardize case\n",
+    "speech_df['text'] = speech_df['text'].str.lower()\n",
+    "# Generate Feature : Average length of word\n",
+    "speech_df['char_cnt'] = speech_df['text'].str.len()\n",
+    "speech_df['word_cnt'] = speech_df['text'].str.split().apply(len)\n",
+    "speech_df['avg_word_len'] = speech_df['char_cnt'] / speech_df['word_cnt']\n",
+    "\n",
+    "# Generate Feature : tf-idf\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "import nltk\n",
+    "# nltk.download('stopwords')\n",
+    "stop_words = set(stopwords.words('english'))\n",
+    "from nltk.corpus import stopwords\n",
+    "vec = TfidfVectorizer(max_df=0.9, min_df=0.1, max_features=100, stop_words=stop_words) \n",
+    "\n",
+    "# Generate Feature : Bag of words / Word Count Vector\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "vec = CountVectorizer(max_features=100, stop_words='english', min_df=0.1, max_df=0.9)\n",
+    "\n",
+    "# Generate Feature : Introduce context with n-grams\n",
+    "vec = TfidfVectorizer(max_df=0.9, min_df=0.1, max_features=100, stop_words=stop_words, ngram_range = (2,2)) # Find context in 2 consecutive words\n",
+    "vec.fit(speech_df['text'])\n",
+    "transformed = vec.transform(speech_df['text'])\n",
+    "vec_df = pd.DataFrame(transformed.toarray(), columns=vec.get_feature_names_out()).add_prefix('Counts_')\n",
+    "\n",
+    "# Sanity check : Find common words / patterns\n",
+    "vec_df.iloc[0].sort_values(ascending=False).head()\n",
+    "vec_df.sum().sort_values(ascending=False).head()\n",
+    "\n",
+    "speech_df = pd.concat([speech_df, vec_df], axis=1, sort=False)\n",
     "```"
    ]
   }
