Chapter 2 : Standardizing Data

--- a/Python/Preprocessing for Machine Learning in Python/takeaways.ipynb
+++ b/Python/Preprocessing for Machine Learning in Python/takeaways.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Chapter 1"
+    "# Chapter 1 & Chapter 2"
    ]
   },
   {
@@ -23,12 +23,18 @@
     "- Helps to:\n",
     "    - produce more reliable results\n",
     "    - Improve model performance\n",
-    "    - Reduce overfitting/underfitting\n",
     "- inspect dataset\n",
     "- See summary statistics\n",
     "- Deal with missing values\n",
     "- Convert to specified column types\n",
-    "- Split into training and testing set (Take class imbalance into account)"
+    "- Split into training and testing set (Take class imbalance into account)\n",
+    "    - Data leakage : non-training data is used to train the model\n",
+    "- Standardize data : Transform numeric data to make it normally distributed\n",
+    "    - Non-normal data introduce bias for some features due to its high variance \n",
+    "    - Non-normal data introduce model underfitting due to difference in scales among different features\n",
+    "    - Log-normalization, standard scaling\n",
+    "    - Tree-based models can be trained without standardization\n",
+    "    - The other models like linear models or dataset with high dimensions requires standardization"
    ]
   },
   {
@@ -55,6 +61,11 @@
     "# Split into training and testing data (Consider class imbalance)\n",
     "from sklearn.model_selection import train_test_split\n",
     "X_train,X_test,y_train,y_test = train_test_split(X, y, stratify=y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# STANDARDIZE DATASET\n",
+    "df.var() # Detect high variance difference in columns are candidates of log normalization\n",
+    "\n",
+    "\n",
     "```"
    ]
   },
