Chapter 4 : Selecting Features for Modeling

--- a/Python/Preprocessing for Machine Learning in Python/takeaways.ipynb
+++ b/Python/Preprocessing for Machine Learning in Python/takeaways.ipynb
@@ -35,11 +35,16 @@
     "    - Log-normalization, standard scaling\n",
     "    - Tree-based models can be trained without standardization\n",
     "    - The other models like linear models or dataset with high dimensions requires standardization\n",
-    "- Feature Engineering:\n",
+    "- Feature Engineering (Creating new features):\n",
+    "    - eg : averaging similar features\n",
     "    - eg : vector of text\n",
     "    - eg : resampling time data (changing time granularity : from second to week, month etc)\n",
     "    - eg : one-hot encoding\n",
-    "- "
+    "- Feature Selection \n",
+    "    - Remove duplicate features (They add bias into the model)\n",
+    "    - Remove features with strong correlation (They add bias into the model)\n",
+    "    - Remove noisy features (irrelevant feature)\n",
+    "    - dimension reduction (eg: PCA, LDA, RFE)"
    ]
   },
   {
@@ -288,6 +293,140 @@
     "vec_df.sum().sort_values(ascending=False).head()\n",
     "\n",
     "speech_df = pd.concat([speech_df, vec_df], axis=1, sort=False)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TF-IDF"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "import nltk\n",
+    "from nltk.corpus import stopwords\n",
+    "# nltk.download('stopwords')\n",
+    "stop_words = set(stopwords.words('english'))\n",
+    "\n",
+    "documents = ['cats say meow', 'dogs say woof', 'dogs chase cats']\n",
+    "# Import TfidfVectorizer\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "# Create a TfidfVectorizer: tfidf\n",
+    "# maximum and minimum fraction a word should occur in is 20% to 80%,  keep top 50 termms\n",
+    "tfidf = TfidfVectorizer(max_df=0.8, min_df=0.2, max_features=50, stop_words=stop_words, ngram_range = (1,1)) # ngram = sequence of words\n",
+    "# Apply fit_transform to document: csr_mat\n",
+    "csr_mat = tfidf.fit_transform(documents)\n",
+    "# Print result of toarray() method\n",
+    "print(csr_mat.toarray())\n",
+    "# Get the words: words\n",
+    "words = tfidf.get_feature_names() # tfidf.get_feature_names_out()\n",
+    "# Print words\n",
+    "print(words)\n",
+    "# Create a dataframe from this sparse matrix representation\n",
+    "df = pd.DataFrame(data=csr_mat.toarray(), columns=words)\n",
+    "# From dataframe to sparse dataframe\n",
+    "sparse_df = some_df.sparse.to_coo()\n",
+    "# From sparse to dense dataframe\n",
+    "dense_df = sparse_df.to_dense()\n",
+    "\n",
+    "# see the words and weights in the model\n",
+    "tfidf.vocabulary_ # words as keys and location of the words in the text as value\n",
+    "tfidf[3].indices # word index no from vocabulary that exist on the 4th row\n",
+    "tfidf[3].data # weight of words on the 4th row\n",
+    "# Create a dictionary for each row of data where location of the word in text is key and value is weights\n",
+    "def return_weights(vocab, vector, index):\n",
+    "    zipped = dict(zip(vector[index].indices, vector[index].data))\n",
+    "    return {vocab[i]:zipped[i] for i in vector[index].indices}\n",
+    "print(return_weights(tfidf.vocabulary_, tfidf, 3))\n",
+    "\n",
+    "# Clustering on tf-idf\n",
+    "num_clusters = 2  # You can adjust this as needed\n",
+    "cluster_centers, distortion = kmeans(csr_mat.todense(), num_clusters)\n",
+    "df['cluster_labels'], _ = vq(csr_mat.todense(), cluster_centers)\n",
+    "# Display top terms for each cluster\n",
+    "for i in range(num_clusters):\n",
+    "    cluster_df = df[df['cluster_labels'] == i]\n",
+    "    top_terms = cluster_df.mean().sort_values(ascending=False).head().index\n",
+    "    print(top_terms)\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PCA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- dimension reduction technique\n",
+    "- Unsupervised learning method\n",
+    "- Combines/decomposes a feature space\n",
+    "- Linear transformation to uncorrelated space\n",
+    "    - Mean of dataset = center of data, put on 0,0\n",
+    "    - The direction of first principal component is the direction of major variance : X-axis\n",
+    "    - The direction on next major variance on perpendicular of the last calculated principal component : Y- axis\n",
+    "    - So on... \n",
+    "    - Thus correlation becomes 0\n",
+    "- Captures as much variance as possible in each component (The most significant principal component has the most variance)\n",
+    "- Blackbox technique : Difficult to interpret components\n",
+    "- Done at the end of preprocessing journey"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.decomposition import PCA\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "std_df = scaler.fit_transform(df)\n",
+    "pca = PCA()\n",
+    "print(pca.fit_transform(std_df))\n",
+    "# See which principal components explains the variance more\n",
+    "print(pca.explained_variance_ratio_)\n",
+    "# See equation of principal components : PC 1 = 0.71 x Feature 1 + 0.71 x Feature 2\n",
+    "print(pca.components_)\n",
+    "\n",
+    "### Alternative approach: Pipeline\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "pipe = Pipeline([('scaler', StandardScaler()),\n",
+    "                ('reducer', PCA(n_components=3)), # n_components=0.9 for capturing 90% variance\n",
+    "                ('classifier', RandomForestClassifier())])\n",
+    "# principal components\n",
+    "pipe['reducer'].components_\n",
+    "# No of principal components\n",
+    "pipe['reducer'].n_components_\n",
+    "# See PCA explained variance\n",
+    "pipe['reducer'].explained_variance_ratio_\n",
+    "# Visualize elbow plot for PCA tuning\n",
+    "plt.plot(pipe['reducer'].explained_variance_ratio_)\n",
+    "# Visualize PCA plot\n",
+    "pc = pipe['reducer'].fit_transform(df)\n",
+    "df['PC 1'] = pc[:,0]\n",
+    "df['PC 2'] = pc[:,1]\n",
+    "sns.scatterplot(data=df, x='PC 1', y='PC 2', hue='cat_col', alpha=0.4)\n",
+    "# Rebuilding back to original Data\n",
+    "pc = pipe['reducer'].transform(X)\n",
+    "X_rebuilt = pipe['reducer'].inverse_transform(pc)\n",
     "```"
    ]
   },
