Chapter 5 : Putting It All Together

--- a/Python/Preprocessing for Machine Learning in Python/takeaways.ipynb
+++ b/Python/Preprocessing for Machine Learning in Python/takeaways.ipynb
@@ -40,6 +40,7 @@
     "    - eg : vector of text\n",
     "    - eg : resampling time data (changing time granularity : from second to week, month etc)\n",
     "    - eg : one-hot encoding\n",
+    "    - eg: regular expression\n",
     "- Feature Selection \n",
     "    - Remove duplicate features (They add bias into the model)\n",
     "    - Remove features with strong correlation (They add bias into the model)\n",
@@ -429,11 +430,6 @@
     "X_rebuilt = pipe['reducer'].inverse_transform(pc)\n",
     "```"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
