Chapter 4 : Selecting the best model with Hyperparameter tuning.

--- a/Python/Model Validation in Python/takeaways.ipynb
+++ b/Python/Model Validation in Python/takeaways.ipynb
@@ -40,7 +40,9 @@
     "        - Specificity \n",
     "        - F1-score\n",
     "- Cross validation : \n",
-    "    - gets rid of bias result that occurs due to sampling\n",
+    "    - gold standard for model validation\n",
+    "    - Every sample produce a slightly different result.\n",
+    "    - gets rid of bias result that occurs due to sampling by taking the average of many samples without replacement\n",
     "    - breaks training data further into training and validating set for producing compact training result\n",
     "    - LOOCV : trains with n-1 data and validates with only 1 data point (generally used for less data. computationally expensive). During cross validation, put `cv=len(X.shape[0])`\n",
     "- Overfitting : \n",
@@ -60,9 +62,118 @@
     "    - 2 types of parameters.\n",
     "    - parameters that do not exist before training the model : you cannot change those (eg: co-efficient of linear regression)\n",
     "    - parameters of the model that can be manually selected to see what parameters might produce optimal result. (eg: maximum depth of a tree)\n",
-    "    - GridSearch: Brute force on all available hyper-parameters\n",
-    "    - Random Search: randomly selecting from available hyper-parameters\n",
+    "    - GridSearch: Brute force on all available combination of hyper-parameters\n",
+    "    - Random Search: randomly selecting combination from available hyper-parameters\n",
     "    - Bayesian Search : use pass test on each step for the next run\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"images/02.01.png\"  style=\"width: 400px, height: 300px;\"/></center>\n",
+    "<center><img src=\"images/02.05.png\"  style=\"width: 400px, height: 300px;\"/></center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Confusion matrix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "matrix_confusion = confusion_matrix(y_test, y_pred)\n",
+    "sns.heatmap(matrix_confusion, square=True, annot=True, cmap='Blues', fmt='d', cbar=False)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model Performance Metric"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Classification:\n",
+    "    - Accuracy is not a good metric for all cases. eg: class imbalanced dataset\n",
+    "    - accuracy = (TP + TN)/ (TP + TN + FP + FN)\n",
+    "    - precision = TP / (TP + FP)\n",
+    "    - High precision = lower false positive rate\n",
+    "    - recall = TP / (TP + FN)\n",
+    "    - High recall = lower false negative rate\n",
+    "    - f1 = 2 * (precision * recall) / (precision + recall)\n",
+    "    - ROC AUC = area under the curve of TP rate vs FP rate graph\n",
+    "    - jaccard score\n",
+    "    - log loss\n",
+    "- Regression:\n",
+    "    - r-squared : Percentage of variability of y explained by independent variable\n",
+    "    - RMSE : Root mean squared error. Average error in target\n",
+    "    - RSE : Residual standard error. Same as RMSE, except instead of length (n), it requires degree of freedom (n-1)\n",
+    "    - MAE : Average absolute error in target\n",
+    "    - VResidual vs fit plot : Fitted values on X axis vs Residual on Y axis. Good model has positive and negative values distributed evenly on both side of a line (gaussian noise).\n",
+    "    - Q-Q Plot : normal distribution on X axis vs dataset distribution on Y axis. Good model has linear relationship of equation line Y= mX + c\n",
+    "    - Distance location plot : Fitted values on X-axis vs root of standardized residuals on Y-axis. \n",
+    "    - measurement of extreme values (outliers):\n",
+    "        - leverage : measurement of how extreme the explanatory variable values are\n",
+    "        - influence : how much the model would change if you leave the observation out of the dataset when modeling. (eg : cooks distance)\n",
+    "- Hyperparameter tuning = \n",
+    "    - Hyperparameters are Parameters we specify before fitting the model\n",
+    "    - We compare model outcomes by changing these hyperparametes \n",
+    "    - Use cross-validation to avoid overfitting\n",
+    "    - example : gridsearch\n",
+    "- Use boxplot of cross-validation results of different models to compare their distribution of scores"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bias-Variance Trade-off"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Overfitting : \n",
+    "    - Model also memorises / trains on noise that resides within training data. \n",
+    "    - Model performs well when evaluating on training data but does not perform well on unseen data\n",
+    "    - High variance is responsible for this error because of also capturing noise.\n",
+    "    - Diagnosis: cross-val prediction on test set has high error than prediction on train set\n",
+    "    - Possible remedy : Decrease model complexity, gather more data, \n",
+    "- Underfitting :\n",
+    "    - Model is too simple to catch the pattern, model is not good enough to capture the underlying pattern.\n",
+    "    - Model is bad on both training and unseen data\n",
+    "    - Model is not flexibple enough to approximate the prediction values\n",
+    "    - High bias is responsible for this error\n",
+    "    - Diagnosis: cross-val prediction on train and test set are roughly equal but have very high errors that is undesirable\n",
+    "    - Possible remedy : Increase model complexity, gather more features, \n",
+    "- Bias-Variance trade-off :\n",
+    "    - Generalization error = bias^2 + variance + irreducable error (noise)\n",
+    "    - bias = error term that tells how on average real value is different from predicted value\n",
+    "    - variance = error term that tells how predicted value varies over different training sets\n",
+    "    - When model complexity increases, variance increases and bias decreases\n",
+    "    - When model complexity decreases, variance decreases and bias increases\n",
+    "    - The sweet spot is the minimised generalization error, which gives the optimised model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"images/02.02.png\"  style=\"width: 400px, height: 300px;\"/></center>\n",
+    "<center><img src=\"images/02.03.png\"  style=\"width: 400px, height: 300px;\"/></center>\n",
+    "<center><img src=\"images/02.04.png\"  style=\"width: 400px, height: 300px;\"/></center>\n"
    ]
   },
   {
@@ -89,7 +200,7 @@
     "from sklearn.metrics import mean_absolute_error, make_scorer\n",
     "\n",
     "kf = KFold(n_splits=5, shuffle=True, random_state=42)\n",
-    "# splits = kf.split(X) # See how they are splitted\n",
+    "# splits = kf.split(X) # See how they are splitted, each split contains index of training and validation\n",
     "# r-squared results for 5-fold cross validation score  \n",
     "mae_scorer = make_scorer(mean_absolute_error)\n",
     "scores = cross_val_score(your_model, X, y, cv=kf, scoring=mae_scorer)  # a list of error terms\n",
