Chapter 2 : Grid search

--- a/Python/Hyperparameter Tuning in Python/takeaways.ipynb
+++ b/Python/Hyperparameter Tuning in Python/takeaways.ipynb
@@ -211,6 +211,20 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Chapter 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Grid search"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
